# RemoveDuplicateFiles

./: CMakeLists.txt  README.md  main.cpp  test_script.sh
Domain/: domain.hpp
DomainManager/: domain_manager.cpp  domain_manager.hpp
FileFilterPolicy/: file_filter_policies.hpp  file_filter_policy.hpp
FileManager/: file_manager.hpp
FileProcessor/: file_processor.hpp
SeparationPolicy/: separation_policies.hpp  separation_policy.hpp
SetCover/: fast_set_cover.cpp  set_cover.hpp
