cmake_minimum_required(VERSION 3.12)  # Minimum version of CMake required
project(DirectoryIterator)            # Name of your project

# Set C++20 as the standard
set(CMAKE_CXX_STANDARD 20)
set(CMAKE_CXX_STANDARD_REQUIRED True)

# Add an executable for your application
add_executable(DirectoryIterator main.cpp)

#link libraries TODO
